objects/QuotationDetailInformation__c.object
<CustomObject>
    <fields>
        <fullName>AccompanyingPaperOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>別紙出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BranchNo__c</fullName>
        <formula>LEFT( RIGHT( QuoteNo_BranchNo_SEQ_Sync__c , 9) , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>枝番</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificationExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>直販/定価証明書出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommissionTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>口銭対象</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <label>Depth</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>値引き金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountRate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>値引き率</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsDiscountTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>値引設定対象</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDisplayDecimal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets its value from UserSetting__c&apos;s IsDisplayDecimal__c field.</description>
        <label>isDisplayDecimal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOverheadTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>諸経費対象</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProductCodeStartNumeric__c</fullName>
        <formula>OR(
  LEFT(ProductCode__c, 1) == &apos;0&apos;,
  LEFT(ProductCode__c, 1) == &apos;1&apos;,
  LEFT(ProductCode__c, 1) == &apos;2&apos;,
  LEFT(ProductCode__c, 1) == &apos;3&apos;,
  LEFT(ProductCode__c, 1) == &apos;4&apos;,
  LEFT(ProductCode__c, 1) == &apos;5&apos;,
  LEFT(ProductCode__c, 1) == &apos;6&apos;,
  LEFT(ProductCode__c, 1) == &apos;7&apos;,
  LEFT(ProductCode__c, 1) == &apos;8&apos;,
  LEFT(ProductCode__c, 1) == &apos;9&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsProductCodeStartNumeric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShowDetailAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>明細金額表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTaxationTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>課税対象</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>最終更新日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PagebreakTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>改ページ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親詳細情報</label>
        <referenceTo>QuotationDetailInformation__c</referenceTo>
        <relationshipLabel>見積書詳細情報</relationshipLabel>
        <relationshipName>ChildDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>見積書情報</label>
        <referenceTo>QuotationInformation__c</referenceTo>
        <relationshipLabel>見積書詳細情報</relationshipLabel>
        <relationshipName>QuotationDetailInformations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>品目コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityUnit__c</fullName>
        <label>単位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>数量</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteInfo_RecType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>見積書情報_レコードタイプ参照用</label>
        <referenceTo>QuotationInformation__c</referenceTo>
        <relationshipLabel>見積書詳細情報 (見積書情報_レコードタイプ参照用)</relationshipLabel>
        <relationshipName>ChildDetails2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteNo_BranchNo_SEQ_Sync__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>見積No/枝番/SEQ</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuoteNo__c</fullName>
        <formula>LEFT(QuoteNo_BranchNo_SEQ_Sync__c,  FIND(&quot;_&quot;, QuoteNo_BranchNo_SEQ_Sync__c) - 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>Parent__r.RecordType.DeveloperName</formula>
        <label>レコードタイプ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SequenceNo__c</fullName>
        <formula>RIGHT(QuoteNo_BranchNo_SEQ_Sync__c, 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>ソート番号</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDiscountAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>値引き後金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>1.明細
2.見出し
3.諸経費
4.小計</description>
        <label>タイプ</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>見積書詳細情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QuoteNo_BranchNo_SEQ_Sync__c</columns>
        <columns>Type__c</columns>
        <columns>Depth__c</columns>
        <columns>SortNo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>QuantityUnit__c</columns>
        <columns>UnitPrice__c</columns>
        <columns>Quantity__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Depth__c</columns>
        <columns>IsDisplayDecimal__c</columns>
        <columns>SortNo__c</columns>
        <columns>Type__c</columns>
        <columns>IsTaxationTarget__c</columns>
        <columns>Amount__c</columns>
        <columns>QuoteNo_BranchNo_SEQ_Sync__c</columns>
        <columns>Parent__c</columns>
        <columns>CommissionTarget__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>QT{00000000}</displayFormat>
        <label>見積書詳細</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>